# valid_json

./: DEVELOPING.md  README.md  pyproject.toml
.github/workflows/: pr_qc.yml
test/integration/: test_validator.py
test/unit/: test_validator.py
validator/: __init__.py  main.py
