[project]
name = "is-valid-json"
version = "0.0.0"
description = "Validator that checks if the given value is parseable as valid JSON."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "guardrails-ai>=0.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "test"
]
